# llm_evaluation

./: .gitignore  README.md  openapi.json
backend/: pyproject.toml  task_tree.json
backend/app/: main.py
backend/app/api/: comparisons.py  evaluations.py  leaderboard.py  llms.py  router.py  users.py
backend/app/core/: celery_client.py  config.py  events.py  exceptions.py  middleware.py
backend/app/db/: base.py  session.py
backend/app/domains/comparisons/: dependency.py  errors.py  repository.py  schemas.py  service.py
backend/app/domains/evaluations/: aggregator.py  benchmark_options.py  dependencies.py  errors.py  helper.py  models.py  notifications.py  parser.py  repository.py  runner.py  schemas.py  service.py  tasks.py  traversal.py  traversal2.py  utils.py
backend/app/domains/leaderboard/: dependency.py  errors.py  repository.py  schemas.py  service.py
backend/app/domains/llms/: dependencies.py  errors.py  models.py  repository.py  schemas.py  service.py  utils.py
backend/app/domains/users/: dependencies.py  errors.py  models.py  repository.py  schemas.py  service.py
backend/scripts/: inspect_lm_eval_results.py
backend/tests/: conftest.py  mock_server.py  seed_comparison_data.py  seed_leaderboard_data.py  test.py
backend/tests/domains/comparisons/integration/: conftest.py  test_api.py  test_repository.py
backend/tests/domains/comparisons/unit/: test_service.py
backend/tests/domains/evaluations/integration/: conftest.py  test_api.py  test_repository.py  test_service.py
backend/tests/domains/evaluations/unit/: conftest.py  test_aggregator.py  test_parser.py  test_runner.py  test_service.py
backend/tests/domains/leaderboard/unit/: test_service.py
backend/tests/seeds/: comparisons.py  evaluations.py  leaderboard.py  llms.py
(+168 files in other folders)
