[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.14.0",
    "aio-pika>=9.6.2",
    "celery>=5.6.3",
    "deepdiff>=9.1.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.1",
    "lm-eval[api]>=0.4.12",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pika>=1.4.1",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "ruamel-yaml>=0.19.1",
    "ruff>=0.15.13",
    "sqlmodel>=0.0.38",
    "sse-starlette>=3.4.5",
    "torch>=2.12.1",
    "transformers>=5.12.0",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-mock>=3.15.1",
]
